re-order home cover to account for safari bug on column-reverse gaps in flex

--- a/src/components/HomeCover/HomeCover.scss
+++ b/src/components/HomeCover/HomeCover.scss
@@ -1,10 +1,9 @@
 .home-cover {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  row-gap: 5rem;
-  column-gap: 5rem;
+  gap: 5rem;
   width: calc(100% - 6rem); 
   padding: 3rem 3rem;
 
